--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -18,13 +18,19 @@
             </div>
             <div class="card-stats">
               <div class="stat">
-                <div class="type">Train</div>
+                <div class="type">
+                  <a>Train</a>
+                </div>
               </div>
               <div class="stat border">
-                <div class="type">Home</div>
+                <div class="type">
+                  <a>Home</a>
+                </div>
               </div>
               <div class="stat">
-                <div class="type">Test</div>
+                <div class="type">
+                  <a>Test</a>
+                </div>
               </div>
             </div>
           </div>
