--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -19,17 +19,17 @@
             <div class="card-stats">
               <div class="stat">
                 <div class="type">
-                  <a>Train</a>
+                  <a href="{{ url_for('train_view') }}">Train</a>
                 </div>
               </div>
               <div class="stat border">
                 <div class="type">
-                  <a>Home</a>
+                  <a href="{{ url_for('index_view') }}">Home</a>
                 </div>
               </div>
               <div class="stat">
                 <div class="type">
-                  <a>Test</a>
+                  <a href="{{ url_for('test_view') }}">Test</a>
                 </div>
               </div>
             </div>
