--- a/flask_webapp/templates/train.html
+++ b/flask_webapp/templates/train.html
@@ -10,14 +10,14 @@
 
     <Body>
         <div class="card-train">
-            <div class="card-input"></div>
+            <div class="card-input"><h1 class="input-text"><strong>A</strong></h1></div>
             <div class="card-video">
                 <video class="videobox canvasbox" autoplay="autoplay" id="myvideo" style="display: none;"></video>
                 <canvas id="canvas" class="border canvasbox"></canvas>
             </div>
             <div class="card-text">
               <span class="date">your answer is: </span>
-              <h2>Correct!</h2>
+              <h2 class="answer">Correct!</h2>
             </div>
             <div class="card-progress">
               <ol class="tunnel">
@@ -72,6 +72,7 @@
         <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script>
           <!-- Place your code in the script tag below. You can also use an external .js file -->
         <script>
+
             const video = document.getElementById("myvideo");
             const canvas = document.getElementById("canvas");
             const context = canvas.getContext('2d');
@@ -101,7 +102,9 @@
             function runDetection() {
                 model.detect(video).then(predictions => {
                     console.log("Predictions: ", predictions);
+
                     model.renderPredictions(predictions, canvas, context, video);
+
                     requestAnimationFrame(runDetection);
                 });
             }
