--- a/flask_webapp/templates/train.html
+++ b/flask_webapp/templates/train.html
@@ -17,7 +17,7 @@
             </div>
             <div class="card-text">
               <span class="date">your answer is: </span>
-              <h2 class="answer">Correct!</h2>
+              <h2 id="answer" class="answer"></h2>
             </div>
             <div class="card-progress">
               <ol class="tunnel">
@@ -105,21 +105,36 @@
                       let screenshot_context = canvas.getContext('2d');
                       // draw the video contents into the canvas x, y, width, height
                       screenshot_context.drawImage(video, 0, 0, canvas.width, canvas.height);
-                      console.log("Try");
                       if(makeRequest){
 
                         let ctx = canvas.getContext('2d');
                         ctx.drawImage(video, predictions[0]['bbox'][0], predictions[0]['bbox'][1], predictions[0]['bbox'][2] + 15 , predictions[0]['bbox'][3] + 15, 0, 0, canvas.width, canvas.height)
                         const dataURL = canvas.toDataURL('image/png');
-                        console.log("Reuqets Made");
+                        console.log("Reuqest Made");
                         console.log(dataURL);
                         //ajax code for rest api
-
+                        
                         //*********************
-                        this.makeRequest = false;
-                        setTimeout(() => {
-                          this.makeRequest = true;
-                        }, 4000);
+                        match = true;
+                        
+                        if(match){
+                          this.makeRequest = false;
+                          document.getElementById('answer').textContent = 'Correct!';
+                          // change the image and answer and the progress bar and set makerequest True after 2 sec.
+
+                        }
+                        else {
+                          this.makeRequest = false;
+                          console.log('wrong!')
+                          document.getElementById('answer').textContent = 'Wrong!';
+                          setTimeout(() => {
+                            this.makeRequest = true;
+                          }, 2000);
+                          
+                        }
+                        //************
+                        
+                        
 
                     }
                   }
