--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -29,7 +29,7 @@
               </div>
               <div class="stat">
                 <div class="type">
-                  <a href="{{ url_for('test_view') }}">Test</a>
+                  <a href="https://www.disabled-world.com/disability/types/hearing/communication/american-sign-language.php">Info</a>
                 </div>
               </div>
             </div>
